--- a/backend/package.json
+++ b/backend/package.json
@@ -2,14 +2,15 @@
   "name": "svaraai",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --watch --env-file=.env app.js"
+    "start": "node --watch --env-file=.env server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongoose": "^8.18.2",
     "nodemon": "^3.1.10"
